--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "license": "MIT",
   "scripts": {
     "compile-aqua": "aqua -i ./aqua/ -o ./src/services/_aqua",
-    "watch-aqua": "chokidar \"**/*.aqua\" -c \"npm run compile-aqua\""
+    "watch-aqua": "chokidar \"**/*.aqua\" -c \"npm run compile-aqua\"",
+    "test": "jest"
   },
   "dependencies": {
     "@fluencelabs/fluence": "^0.23.0",
     "@fluencelabs/fluence-network-environment": "^1.0.13"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@fluencelabs/aqua": "^0.7.4-322",
     "@fluencelabs/aqua-lib": "^0.5.2",
     "chokidar-cli": "^3.0.0",
