--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fluencelabs/aqua-ipfs": "^0.5.5",
     "@fluencelabs/fluence": "^0.23.0",
     "@fluencelabs/fluence-network-environment": "^1.0.13"
   },
@@ -19,6 +20,7 @@
     "@fluencelabs/aqua": "^0.7.4-322",
     "@fluencelabs/aqua-lib": "^0.5.2",
     "chokidar-cli": "^3.0.0",
+    "jest": "^28.1.2",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
