--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
   "dependencies": {
     "@fluencelabs/aqua-ipfs": "^0.5.5",
     "@fluencelabs/fluence": "^0.23.0",
-    "@fluencelabs/fluence-network-environment": "^1.0.13"
+    "@fluencelabs/fluence-network-environment": "^1.0.13",
+    "@truffle/hdwallet-provider": "^2.0.12",
+    "ipfs-http-client": "^57.0.3",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.0.9",
+    "web3": "^1.7.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.9",
     "@babel/preset-typescript": "^7.18.6",
     "@fluencelabs/aqua": "^0.7.4-322",
     "@fluencelabs/aqua-lib": "^0.5.2",
+    "@types/sqlite3": "^3.1.8",
     "chokidar-cli": "^3.0.0",
+    "dotenv": "^16.0.1",
     "jest": "^28.1.2",
-    "ts-node": "^10.8.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
